jenkins/overlays/jed/jenkins-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins-ingressroute-http
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`jenkins.jed.local`)
    services:
    - name: jenkins-service
      port: 8080
    middlewares:
    - name: middleware-jenkins-redirect-https
      namespace: jenkins

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins-ingressroute-https
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`jenkins.jed.local`)
    services:
    - name: jenkins-service
      port: 8080
    middlewares:
    - name: middleware-jenkins-redirect-https
      namespace: jenkins
  tls:
    secretName: jenkins-ingress

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: middleware-jenkins-redirect-https
  namespace: jenkins
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"
